...
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        
        alert.view.accessibilityIdentifier = "logout_alert"
        
        alert.addAction(UIAlertAction(title: "Нет", style: .cancel))
        let yesAction = UIAlertAction(
                title: "Да",
                style: .destructive
            ) { [weak self] _ in
                self?.logout()
            }
        
            yesAction.accessibilityIdentifier = "logout_confirm_button" 
            alert.addAction(yesAction)
        present(alert, animated: true)
    }
    
    func logout() {
        presenter?.didTapConfirmLogout()
...
