...
        return element
    }()
    
    lazy var wkWebView: WKWebView = {
        let element = WKWebView()
        element.backgroundColor = .white
        element.accessibilityIdentifier = "UnsplashWebView"
        element.customUserAgent = "Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.0 Mobile/15E148 Safari/604.1"
        element.translatesAutoresizingMaskIntoConstraints = false
        return element
    }()
    
    // MARK: - Init
...
