...
    private lazy var logInButton: UIButton = {
        let element = UIButton(type: .system)
        element.setTitle("Войти", for: .normal)
        element.tintColor = UIConstants.Colors.blackColor
        element.backgroundColor = .white
        element.layer.cornerRadius = 16
        element.accessibilityIdentifier = "Authenticate"
        element.translatesAutoresizingMaskIntoConstraints = false
        element.addTarget(
            self,
            action: #selector(logInButtonTapped),
            for: .touchUpInside
        )
...
